--- a/app/views/chis-oas.yaml
+++ b/app/views/chis-oas.yaml
@@ -24,7 +24,9 @@ info:
 
     *** This is a draft document, this service is not in Production. ***
 
-    The service provides two endpoints.  One is used to 'confirm' a citizen is of interest in regards to their care home residency status and the other is used to 'notify' DWP of a change in their residency status.
+    The service provides two endpoints.
+
+    One is used to 'confirm' if a citizen's care home residency is of interest to DWP and the other is used to 'notify' DWP of a change in their residency status.
 
     The /confirm/{consumerGuid} endpoint takes a GET and is used to confirm whether the identified citizen's care home status is of interest to DWP.  The Consumer GUID provided identifies the citizen
     and is obtained by a separate call to the Citizen API / Match service.
@@ -33,7 +35,7 @@ info:
     by supplying a corresponding object within the JSON payload (no more than one of each notification type, minimum of one notification) :
     <ul>
       <li> Admission (admission) - initial admission to a care home or re-admission to the same care home.
-      <li> Change of circumstances (changeOfCircumstances) - e.g. moving to a new care home
+      <li> Change of circumstances (changeOfCircumstances) - for example, moving to a new care home
       <li> Leaving a care home (leavingCareHome)
       <li> Hospital admission (hospitalAdmission)
       <li> Funding change (fundingChange)
@@ -185,52 +187,53 @@ paths:
 
 components:
   parameters:
-    ConsumerGuid:
-      name: 'consumerGuid'
-      description: A unique DWP identifier for a Citizen obtained from a separate, independent call to the Citizen API / Match Service.
+    CitizenGUID: #(note changed from ConsumerGuid, but probs have to change back if pre-existing)
+      name: citizen-guid
+      description: "A unique DWP identifier for a citizen obtained from a separate, independent call to the Citizen API (Match) service."
       in: path
       required: true
       schema:
         type: string
     AuthorisationBearer:
-      name: 'Authorisation:Bearer'
+      name: authorisation-bearer
       in: header
-      description: The OAUTH2 Access token.
+      description: "The OAUTH2 Access token." #(query that - referred to as OAuth 2.0 in the spuuporting docs and OAUTH2 here - also, capital 'A' on access?)
       required: true
       schema:
         type: string
     CorrelationID:
       name: correlation-id
       in: header
-      description: Identifier used to locate related transactions (e.g. 12345678-1234-1234-1234-123456789012)
+      description: "Identifier used to locate related transactions." #(check assumption, these are all things that already exist)
+      example: "12345678-1234-1234-1234-123456789012"
       required: true
       schema:
         type: string
     InstigatingOrganisation:
       name: instigating-organisation
       in: header
-      description: Validated against DWP's master External Organisation Catalogue.
+      description: "Validated against DWP's master External Organisation Catalogue."
       required: true
       schema:
         type: string
     InstigatingSystem:
       name: instigating-system
       in: header
-      description: 'External: Name of sending external system e.g. an external system or application name.'
+      description: "External: Name of sending external system." #(why say 'External:')
       required: true
       schema:
         type: string
     InstigatingUserId:
       name: instigating-user-id
       in: header
-      description: 'External: Identifier of the logged in User ID (used for auditing if auditing is enabled.'
+      description: "External: ID number of the logged in user." #(why say 'External:' - is it a number?)
       required: true
       schema:
         type: string
     TransactionDate:
       name: transaction-date
       in: header
-      description: "Date & time when the communication was instigated"
+      description: "Date and time when the communication was instigated."
       example: "2021-05-21T17:12:34"
       required: true
       schema:
@@ -238,7 +241,7 @@ components:
     SessionId:
       name: session-id
       in: header
-      description: ""
+      description: "" #(It's BLANK, you animals!)
       required: false
       schema:
         type: string
@@ -250,7 +253,7 @@ components:
       schema:
         type: string
     CacheControl:
-      name: Cache-Control
+      name: cache-control #probs have to change back if pre-existing
       in: header
       description: "Ensures response is not cached."
       required: true
@@ -309,25 +312,25 @@ components:
           properties:
             previousAddressUprn:
               $ref: '#/components/schemas/UPRN'
-              description: "We are expecting a UPRFalse or the full address, but not both."
+              description: "We are expecting a UPRN or the full address, but not both."
             previousAddressLine1:
               $ref: '#/components/schemas/AddressLine1'
-              description: "Building Name or number."
+              description: "Building number or name of the citizen's address before they moved into the care home."
             previousAddressLine2:
               $ref: '#/components/schemas/AddressLine2'
-              description: "The previous address at which the citizen lived immediately prior to moving into care home."
+              description: "Second line of the citizen's address before they moved into the care home."
             previousAddressLine3:
               $ref: '#/components/schemas/AddressLine3'
-              description: "The previous address at which the citizen lived immediately prior to moving into care home. "
+              description: "Third line of the citizen's address before they moved into the care home."
             previousCity:
               $ref: '#/components/schemas/AddressCity'
-              description: "The previous address at which the citizen lived immediately prior to moving into care home."
+              description: "The town or city of the citizen's address before they moved into the care home."
             previousPostCode:
               $ref: '#/components/schemas/AddressPostCode'
-              description: "The previous address at which the citizen lived immediately prior to moving into care home."
+              description: "The postcode of the citizen's address before they moved into the care home."
             previousCountry:
               $ref: '#/components/schemas/AddressCountry'
-              description: "The previous address at which the citizen lived immediately prior to moving into care home."
+              description: "The country of the citizen's address before they moved into the care home."
         previousHospitalAdmissions:
           type: array
           items:
@@ -356,30 +359,30 @@ components:
           maxLength: 10
         typeOfStay:
           $ref: '#/components/schemas/TypeOfStay'
-        futureAddress:
+        futureAddress: #It's not in the future though, is it? It's the address after the care home. afterCareAddress, newAddress, etc - miruna/business Architecture
           type: object
           properties:
             futureAddressUprn:
               $ref: '#/components/schemas/UPRN'
-              description: "We are expecting a UPRFalse or the full address, but not both."
+              description: "We are expecting a UPRN or the full address, but not both."
             futureAddressLine1:
               $ref: '#/components/schemas/AddressLine1'
-              description: "The future address to which the citizen will be going after they move out of a care home."
+              description: "Building number or name of the citizen's address after they left the care home."
             futureAddressLine2:
               $ref: '#/components/schemas/AddressLine2'
-              description: "The future address to which the citizen will be going after they move out of a care home."
+              description: "Second line of the citizen's address after they left the care home."
             futureAddressLine3:
               $ref: '#/components/schemas/AddressLine3'
-              description: "The future address to which the citizen will be going after they move out of a care home."
+              description: "Third line of the citizen's address after they left the care home."
             futureCity:
               $ref: '#/components/schemas/AddressCity'
-              description: "The future address to which the citizen will be going after they move out of a care home."
+              description: "The town or city of the citizen's address after they left the care home."
             futurePostCode:
               $ref: '#/components/schemas/AddressPostCode'
-              description: "The future address to which the citizen will be going after they move out of a care home."
+              description: "The postcode of the citizen's address after they left the care home."
             futureCountry:
               $ref: '#/components/schemas/AddressCountry'
-              description: "The future address to which the citizen will be going after they move out of a care home."
+              description: "The country of the citizen's address after they left the care home."
       required:
         - localAuthorityId
         - careAdmissionDate
@@ -395,13 +398,13 @@ components:
           $ref: '#/components/schemas/HospitalAddress'
         currentHospitalAdmissionDate:
           type: string
-          description: "The date of admission to hospital, for the current stay."
+          description: "The date of admission to hospital."
           pattern: "yyyy-MM-dd"
           example : "2021-04-28"
           maxLength: 10
         currentHospitalDischargeDate:
           type: string
-          description: "The date of discharge from hospital, for the stay."
+          description: "The date of discharge from hospital."
           pattern: "yyyy-MM-dd"
           example : "2021-05-28"
           maxLength: 10
@@ -425,12 +428,12 @@ components:
       properties:
         careHomeId:
           type: string
-          description: "To be provided in addition to the care home address OR UPRN (optional). CQC registration number/id."
+          description: "To be provided in addition to the care home address OR UPRFalse (optional). CQC registration number/id." #Why only CQC - what about the other ones? Miruna/bus architecture
           example: "SIN-12345678-abcd"
           maxLength: 17
         careHomeRoomNumber:
           type: string
-          description: "The room number assigned to a citizen throughout a given stay in a Care Home."
+          description: "The room number assigned to the citizen in a Care Home."
           example: "123"
           maxLength: 3
         careHomeUprn:
@@ -465,22 +468,22 @@ components:
           description: "We are expecting a UPRN or the full address, but not both. Hospital address/UPRN are optional as it may not always be available."
         hospitalAddressLine1:
           $ref: '#/components/schemas/AddressLine1'
-          description: "The address of the hospital the citizen is currently  admitted to, if known."
+          description: "First line of the address of the hospital, if known."
         hospitalAddressLine2:
           $ref: '#/components/schemas/AddressLine2'
-          description: "The address of the hospital the citizen is currently  admitted to, if known."
+          description: "Second line of the address of the hospital, if known."
         hospitalAddressLine3:
           $ref: '#/components/schemas/AddressLine3'
-          description: "The address of the hospital the citizen is currently  admitted to, if known."
+          description: "Third line of the address of the hospital, if known."
         hospitalCity:
           $ref: '#/components/schemas/AddressCity'
-          description: "The address of the hospital the citizen is currently  admitted to, if known."
+          description: "The town or city of the address of the hospital, if known."
         hospitalPostCode:
           $ref: '#/components/schemas/AddressPostCode'
-          description: "The address of the hospital the citizen is currently  admitted to, if known."
+          description: "The postcode of the address of the hospital, if known."
         hospitalCountry:
           $ref: '#/components/schemas/AddressCountry'
-          description: "The address of the hospital the citizen is currently  admitted to, if known."
+          description: "The country of the address of the hospital, if known."
 
     Hospitalisation:
       type: object
@@ -489,31 +492,31 @@ components:
           $ref: '#/components/schemas/HospitalAddress'
         isCurrentlyHospitalised:
           type: boolean
-          description: "A True/False value to indicate whether the citizen is currently hospitalised."
+          description: "A True/False value to indicate whether the citizen is currently in hospital."
           example: false
-        currentHospitalAdmissionDate:
+        currenttHospitalAdmissionDate: #not current... need to clarify this with Miruna/BA/Business Architecture
           type: string
-          description: "The most recent hospital admission date, where there has been one within a month prior to going to a care home."
+          description: "The most recent hospital admission date, if there is one within a month before going to a care home."
           pattern: "yyyy-MM-dd"
           example : "2017-01-19"
-        currentHospitalDischargeDate:
+        currentHospitalDischargeDate: #not current...
           type: string
           description: "The most recent hospital discharge date, which could be the same date as the care home admission date."
           pattern: "yyyy-MM-dd"
           example : "2017-01-19"
         hospitalisedInPreviousMonth:
           type: string
-          description: "A Truee/False/Unknown value to indicate whether the citizen has been hospitalised in previous month."
+          description: "A True/False/Unknown value to indicate whether the citizen has been in hospital in previous month." #Can this be above the hospital admission date?
           example: true
           maxLength: 7
         previousHospitalAdmissionDate:
           type: string
-          description: "The date citizen was admitted to the hospital in previous stay."
+          description: "The date the citizen was admitted to the hospital in previous stay." #How does this relate to the currentHospitalAdmissionDate?
           pattern: "yyyy-MM-dd"
           example : "2017-01-19"
         previousHospitalDischargeDate:
           type: string
-          description: "The date citizen was discharged from the hospital dureing previous stay."
+          description: "The date the citizen was discharged from the hospital during previous stay."
           pattern: "yyyy-MM-dd"
           example : "2017-01-19"
 
@@ -526,14 +529,14 @@ components:
           type: string
           pattern: "yyyy-MM-dd"
           example: "2017-01-19"
-          description: "The date on which a citizen is notified by the LA about the funding decision (i.e. who pays for the stay in the care home)."
+          description: "The date the citizen was notified by the LA about the funding decision (a decision on who pays for the stay in the care home)."
           maxLength: 10
         fundingType:
           $ref: '#/components/schemas/FundingType'
         isCurrentlyFunded:
           type: boolean
           example: true
-          description: "A True/False value to indicate whether the citizen's stay in a care home is currently funded."
+          description: "A True/False value to indicate whether the citizen's stay in a care home is currently funded by the LA."
         legislation:
           $ref: '#/components/schemas/Legislation'
         scottishQuestions:
@@ -541,7 +544,7 @@ components:
         paymentNotifiedStartDate:
           type: string
           pattern: "yyyy-MM-dd"
-          description: "The date on which a citizen  is notified by the LA who will pay for the care"
+          description: "The date on which a citizen is notified by the LA who will pay for the care" #how is this different from fundingDecisionNotifiedDate - Miruna/bus arch
           example: "2017-01-19"
           maxLength: 10
         paymentStartDate:
@@ -572,9 +575,9 @@ components:
           type: string
           pattern: "yyyy-MM-dd"
           example: "2017-01-19"
-          description: "The date agreed for either personal or nursing care and this could be a restrospective date."
+          description: "The date agreed for either personal or nursing care and this could be a retrospective date."
           maxLength: 10
-        isFundungForNursingCareOnly:
+        isFundingForNursingCareOnly:
           type: boolean
           description: "A True/False value to indicate whether the funding is paid towards nursing care only."
           example: true
